--- a/db/tank_game.lpc.html
+++ b/db/tank_game.lpc.html
@@ -80,6 +80,38 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >bullet2</TD>
+<TD >24</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >21</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >bullet1</TD>
+<TD >24</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >21</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >vga_top|videoSync</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -129,7 +161,7 @@
 </TR>
 <TR >
 <TD >vga_top|videoGen</TD>
-<TD >65</TD>
+<TD >105</TD>
 <TD >0</TD>
 <TD >3</TD>
 <TD >0</TD>
@@ -145,7 +177,7 @@
 </TR>
 <TR >
 <TD >vga_top</TD>
-<TD >42</TD>
+<TD >82</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
