--- a/db/tank_game.lpc.html
+++ b/db/tank_game.lpc.html
@@ -16,6 +16,22 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >score_inst</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >4</TD>
+<TD >6</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >collision_2_1</TD>
 <TD >40</TD>
 <TD >0</TD>
@@ -101,7 +117,7 @@
 <TD >48</TD>
 <TD >0</TD>
 <TD >48</TD>
-<TD >52</TD>
+<TD >53</TD>
 <TD >48</TD>
 <TD >48</TD>
 <TD >48</TD>
