--- a/db/tank_game.lpc.html
+++ b/db/tank_game.lpc.html
@@ -16,15 +16,31 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >lcd</TD>
+<TD >8</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >score_inst</TD>
 <TD >4</TD>
-<TD >4</TD>
 <TD >0</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >6</TD>
-<TD >4</TD>
-<TD >4</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
